<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddApps">

    <ImageView
        android:id="@+id/imgView_Substraction1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_90sdp"
        android:scaleType="fitXY"
        android:src="@drawable/subtraction1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selectApps2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fonarto"
        android:text="@string/selectApps2"
        android:layout_marginStart="@dimen/_30sdp"
        android:textColor="#000"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgView_Substraction1" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fonarto"
        android:text="@string/markApps"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="@+id/selectApps2"
        app:layout_constraintTop_toBottomOf="@+id/selectApps2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:src="@drawable/apps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgView_Substraction1" />

    <TextView
        android:id="@+id/txtView_Messenger2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fonarto"
        android:layout_marginTop="@dimen/_60sdp"
        android:text="@string/messenger"
        android:textColor="#000"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintStart_toStartOf="@+id/selectApps2"
        app:layout_constraintTop_toBottomOf="@+id/selectApps2" />

    <TextView
        android:id="@+id/txtView_Instagram2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/fonarto"
        android:text="@string/instagram"
        android:textColor="#000"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintStart_toStartOf="@+id/txtView_Messenger2"
        app:layout_constraintTop_toBottomOf="@+id/txtView_Messenger2" />

    <TextView
        android:id="@+id/txtView_Skype2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/fonarto"
        android:text="@string/skype"
        android:textColor="#000"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintStart_toStartOf="@+id/txtView_Instagram2"
        app:layout_constraintTop_toBottomOf="@+id/txtView_Instagram2" />

    <TextView
        android:id="@+id/txtView_Viber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/fonarto"
        android:text="@string/viber"
        android:textColor="#000"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintStart_toStartOf="@+id/txtView_Skype2"
        app:layout_constraintTop_toBottomOf="@+id/txtView_Skype2" />

    <TextView
        android:id="@+id/txtView_WhatsApp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/fonarto"
        android:text="@string/whatsApp"
        android:textColor="#000"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintStart_toStartOf="@+id/txtView_Viber2"
        app:layout_constraintTop_toBottomOf="@+id/txtView_Viber2" />

    <TextView
        android:id="@+id/txtView_Imo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/fonarto"
        android:text="@string/imo"
        android:textColor="#000"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintStart_toStartOf="@+id/txtView_WhatsApp2"
        app:layout_constraintTop_toBottomOf="@+id/txtView_WhatsApp2" />

    <Switch
        android:id="@+id/switch_Messenger2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/SwitchTheme"
        app:layout_constraintBottom_toBottomOf="@+id/txtView_Messenger2"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/txtView_Messenger2" />

    <Switch
        android:id="@+id/switch_Instagram2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/txtView_Instagram2"
        app:layout_constraintEnd_toEndOf="@+id/switch_Messenger2"
        app:layout_constraintTop_toTopOf="@+id/txtView_Instagram2" />

    <Switch
        android:id="@+id/switch_Skype2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/txtView_Skype2"
        app:layout_constraintEnd_toEndOf="@+id/switch_Instagram2"
        app:layout_constraintTop_toTopOf="@+id/txtView_Skype2" />

    <Switch
        android:id="@+id/switch_Viber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/txtView_Viber2"
        app:layout_constraintEnd_toEndOf="@+id/switch_Skype2"
        app:layout_constraintTop_toTopOf="@+id/txtView_Viber2" />

    <Switch
        android:id="@+id/switch_WhatsApp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/txtView_WhatsApp2"
        app:layout_constraintEnd_toEndOf="@+id/switch_Viber2"
        app:layout_constraintTop_toTopOf="@+id/txtView_WhatsApp2" />

    <Switch
        android:id="@+id/switch_Imo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/txtView_Imo2"
        app:layout_constraintEnd_toEndOf="@+id/switch_WhatsApp2"
        app:layout_constraintTop_toTopOf="@+id/txtView_Imo2" />

    <ImageButton
        android:id="@+id/btn_Apply"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_45sdp"
        android:background="@null"
        android:scaleType="fitXY"
        android:src="@drawable/group489"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintEnd_toEndOf="@+id/switch_Imo2"
        app:layout_constraintStart_toStartOf="@+id/txtView_Imo2"
        app:layout_constraintTop_toBottomOf="@+id/txtView_Imo2" />


</androidx.constraintlayout.widget.ConstraintLayout>