<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ExitScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_70sdp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/subtraction2"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:src="@drawable/group540"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fonarto"
            android:text="@string/ExitMsg"
            android:textColor="#000"
            android:layout_marginTop="@dimen/_25sdp"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/banner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.55"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgView_Icon"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:src="@drawable/icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:fontFamily="@font/fonarto"
            android:text="@string/Yes"
            android:textColor="#FFF"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toTopOf="@+id/btn_Like"
            app:layout_constraintEnd_toEndOf="@+id/btn_Like"
            app:layout_constraintStart_toStartOf="@+id/btn_Like" />

        <ImageButton
            android:id="@+id/btn_Like"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/group543"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_RateUs"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgView_Icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:fontFamily="@font/fonarto"
            android:text="@string/RateUs"
            android:textColor="#FFF"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toTopOf="@+id/btn_RateUs"
            app:layout_constraintEnd_toEndOf="@+id/btn_RateUs"
            app:layout_constraintStart_toStartOf="@+id/btn_RateUs" />

        <ImageButton
            android:id="@+id/btn_RateUs"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/group542"
            app:layout_constraintBottom_toBottomOf="@+id/btn_Like"
            app:layout_constraintEnd_toStartOf="@+id/btn_DisLike"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_Like"
            app:layout_constraintTop_toTopOf="@+id/btn_Like"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:fontFamily="@font/fonarto"
            android:text="@string/No"
            android:textColor="#FFF"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toTopOf="@+id/btn_DisLike"
            app:layout_constraintEnd_toEndOf="@+id/btn_DisLike"
            app:layout_constraintStart_toStartOf="@+id/btn_DisLike" />

        <ImageButton
            android:id="@+id/btn_DisLike"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/group541"
            app:layout_constraintBottom_toBottomOf="@+id/btn_RateUs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_RateUs"
            app:layout_constraintTop_toTopOf="@+id/btn_RateUs" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>